--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2573,7 +2573,7 @@ input, select, textarea {
 		-webkit-flex-wrap: wrap;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		postiion: relative;
+		position: relative;
 		margin: -2.5em 0 0 -2.5em;
 	}
 
@@ -2685,9 +2685,12 @@ input, select, textarea {
 				}
 
 				.tiles article > a span {
-					background-color: rgba(255, 255, 255, 0.5)!important; /* Surlignage */
+					background-color: rgba(255, 255, 255, 0.7)!important; /* Surlignage */
 					border-radius: 4px; /* Arrondir les coins du surlignage */
 					border: 1px solid #585858; /* Ajouter une bordure de 1 pixel */
+					font-size:0.75em!important; /* ajout perso pour modif taille des titres dans les vignettes */
+					padding-left: 5px;
+					padding-right: 5px;
 				}				
 
 				.tiles article > a:hover span {
@@ -2695,13 +2698,13 @@ input, select, textarea {
 					color: #ffffff !important; /* Couleur du texte en blanc */
 					border-radius: 4px; /* Arrondir les coins du surlignage */
 					border: 1px solid #585858; /* Ajouter une bordure de 1 pixel */
+					font-size:1.1em!important; /* ajout perso pour modif taille des titres dans les vignettes */
 				}
 				
 
 
 				.tiles article > a h2 {
 					margin: 0;
-
 				}
 
 				.tiles article > a .content {
@@ -2728,6 +2731,9 @@ input, select, textarea {
 						font-weight: bold;
 						border-radius: 4px; /* Arrondir les coins du surlignage */
 						border: 1px solid #585858; /* Ajouter une bordure de 1 pixel */
+						padding-left: 5px;
+						padding-right: 5px;
+						white-space: nowrap!important; /* pour ne pas couper une expression si elle est trop longue, passe à la ligne */
 					}
 
 
